# N-Puzzle-With-Walls

./: .gitignore  Cargo.toml  HowToPresent.txt  Notes.txt  README.md  README.txt  atlas_aseprite_file.aseprite  events_flow.pptx  n puzzle with walls.docx  ~$events_flow.pptx
.github/workflows/: release.yaml
aseprites/: Arrows.aseprite
fifteen_puzzle_derive/: Cargo.toml
game_logs/: latest_n_puzzle_session_log.txt
saved_layouts/:     hhhhh   hh  h  hh .txt  .txt  3 Blocks.txt  3 scattered blocks.txt  A True Challenge.txt  CustomBoard-Name.txt  For The Experienced.txt  HHHHHHHHHHHHHHHHHHHHHH.txt  R.txt  b.txt  boar.txt  board.txt  boardy.txt  classic 15.txt  easy_layout.txt  giant nightmare.txt  layout-10.txt  layout-3.txt  layout-4.txt  layout-5.txt  layout-6.txt  layout-7.txt  layout-8.txt  layout-9.txt  layout_0.txt  layout_1.txt  layout_10.txt  layout_11.txt  layout_12.txt  layout_13.txt  layout_14.txt  layout_15.txt  layout_16.txt  layout_17.txt  layout_18.txt  layout_19.txt  layout_2.txt  layout_20.txt  layout_21.txt  layout_22.txt  (+34 more)
src/: app.rs  asset_loader.rs  basic_direction.rs  board.rs  board_manager.rs  camera.rs  costume_event.rs  error_handler.rs  graphics.rs  grid.rs  input_handler.rs  input_handling.rs  lib.rs  menu_from_examples.rs  my_macros.rs  screen_setup.rs  system_sets.rs
src/bundles/: mod.rs  saved_layout_bundle.rs  tile_bundle.rs
src/costume_event/: app_event.rs  board_set_event.rs  db_event.rs  game_event.rs  mod.rs  move_tile_event.rs  reset_event.rs  screen_changing_event.rs  screen_unloading_event.rs  system_event.rs  ui_event.rs  (+1 more)
(+257 files in other folders)
