[package]
name = "fifteen_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"
enum-iterator = "1.4.1"
rand = "0.8.5"
# sorted-vec = "0.8.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1 # less precise locations

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # makes their code smaller too
