[package]
name = "fifteen_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
enum-iterator = "2.0.1"
rand = "0.8.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1 # less precise locations

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # makes their code smaller too
